--- a/src/components/views/data/data.module.scss
+++ b/src/components/views/data/data.module.scss
@@ -160,8 +160,7 @@
   border-radius: 4px;
   z-index: 1;
   position: relative;
-  margin: 5px;
-  margin-left: auto;
+  margin: 5px 0 5px auto;
   min-height: 58px;
 
   // data download buttons
